--- a/templates/editar_cliente.html
+++ b/templates/editar_cliente.html
@@ -7,6 +7,9 @@
             <label class="form-label" for="nome">Nome:</label>
             <input class="form-control" type="text" id="nome" name="nome" value="{{cliente_a_editar.nome}}" required>
         </div>
+        <div class="card mb-3">
+            <label for="username_cliente" class="form-label card-title">Nome de usuário: {{cliente_a_editar.username_cliente}}</label>
+        </div>
         
         <div class="mb-3">
             <label class="form-label" for="telefone_celular">Telefone Celular:</label>
