--- a/templates/listar_clientes.html
+++ b/templates/listar_clientes.html
@@ -13,7 +13,7 @@
                 <p class="card-text">{{cliente.nome}}</p>
             </div>
             <div class="me-2">
-                <a class="btn btn-warning btn-sm" href="{{url_for('detalhes_cliente', id=cliente.id)}}">Detalhes</a>
+                <a class="btn btn-warning btn-sm" href="{{url_for('detalhes_cliente', id=cliente.id)}}">Pedidos</a>
                 <a class="btn btn-warning btn-sm" href="{{url_for('editar_cliente', id=cliente.id)}}">Editar</a>
                 <a class="btn btn-danger btn-sm" href="{{url_for('deletar_cliente', id=cliente.id)}}">Excluir</a>
             </div>
