--- a/templates/base_publica.html
+++ b/templates/base_publica.html
@@ -66,58 +66,32 @@
   </style>
 </head>
 <body>
-  <header class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow">
-    <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3 fs-6" href="{{ url_for('home') }}">Oficina do Micro</a>
-    <div class="navbar-nav">
-      <div class="nav-item text-nowrap">
-        <span class="px-3">
-          <button id="themeToggle" class="theme-toggle" title="Alternar tema">🌙</button>
-        </span>
-        {% if current_user.is_authenticated %}
-          <a class="nav-link px-3 d-inline-block" href="{{ url_for('logout') }}">Sair</a>
-        {% endif %}
-      </div>
+  <nav class="navbar navbar-expand-lg bg-body-tertiary shadow-sm">
+  <div class="container">
+    <a class="navbar-brand fw-bold" href="{{ url_for('index') }}">Oficina do Micro</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="#">Serviços</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Contato</a>
+        </li>
+        <li class="nav-item">
+          <a class="btn btn-sm btn-primary ms-2" href="{{ url_for('login_cliente') }}">Área do Cliente</a>
+        </li>
+        <li class="nav-item">
+          <a class="btn btn-sm btn-dark ms-2" href="{{ url_for('login') }}">Área do Administrador</a>
+        </li>
+      </ul>
     </div>
-  </header>
+  </div>
+</nav>
 
-  <div class="container-fluid">
-    <div class="row">
-      <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-body-tertiary sidebar collapse">
-        <div class="position-sticky pt-3 sidebar-sticky">
-          <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted text-uppercase">
-            <span>Gerenciamento</span>
-          </h6>
-          <ul class="nav flex-column">
-            <li class="nav-item">
-              <a class="nav-link" href="{{ url_for('home') }}">
-                Dashboard
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="{{ url_for('listar_clientes') }}">
-                Clientes
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="{{ url_for('listar_servicos') }}">
-                Serviços
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="{{ url_for('listar_pecas') }}">
-                Peças
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="{{ url_for('relatorios') }}">
-                Relatorios
-              </a>
-            </li>
-          </ul>
-        </div>
-      </nav>
-
-      <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
+<main class="">
         <div class="container mt-4">
           
           {% block content %}
