--- a/templates/login_cliente.html
+++ b/templates/login_cliente.html
@@ -4,7 +4,7 @@
 <div class="row justify-content-center">
   <div class="col-md-6 col-lg-4">
     <div class="card p-4 shadow-sm">
-      <h2 class="fw-bold mb-4 text-center">Login Administrador</h2>
+      <h2 class="fw-bold mb-4 text-center">Área do Cliente</h2>
       <form method="post">
         <div class="mb-3">
           <label class="form-label" for="usuario">Usuário:</label>
