--- a/templates/dashboard_cliente.html
+++ b/templates/dashboard_cliente.html
@@ -4,24 +4,24 @@
 <div class="table-responsive">
         <table class="table table-sm table-hover table-striped align-middle">
           <thead class="table-title">
-            <tr>
+            <tr class="text-center">
               <th>Número OS</th>
               <th>Nome Cliente</th>
               <th>Equipamento</th>
               <th>Valor total</th>
-              <th class="text-center">Ação</th>
+              <th>Ação</th>
             </tr>
           </thead>
           <tbody>
             {% for ordem in current_user.ordens_servico %}
-            <tr>
+            <tr class="text-center">
               <td>{{ ordem.numero_formatado }}</td>
               <td>{{ ordem.cliente.nome }}</td>
               <td>{{ ordem.equipamento }}</td>
               <td>R$ {{ "%.2f"|format(ordem.valor_calculado|float) }}</td>
               <td>
-                <a href="{{url_for('ver_os_cliente', id=ordem.id)}}">Detalhar</a>
-                <i class="bi bi-file-earmark-pdf-fill"></i>
+                <a href="{{url_for('ver_os_cliente', id=ordem.id)}}" class="btn btn-sm btn-primary"><i class="bi bi-eye"></i></a>
+                <a href="#" class="btn btn-sm btn-primary"><i class="bi bi-file-earmark-pdf-fill"></i></a>
               </td>
             </tr>
             {% endfor %}
