--- a/templates/login.html
+++ b/templates/login.html
@@ -1,7 +1,7 @@
 {% extends 'base_publica.html' %}
 
 {% block content %}
-<div class="row justify-content-center">
+<div class="row justify-content-center min-vh-100 d-flex align-items-center">
   <div class="col-md-6 col-lg-4">
     <div class="card p-4 shadow-sm">
       <h2 class="fw-bold mb-4 text-center">Login Administrador</h2>
