--- a/templates/listar_clientes.html
+++ b/templates/listar_clientes.html
@@ -1,6 +1,11 @@
 {% extends 'base.html' %}
 
 {% block content %}
+<div class="d-flex justify-content-start">
+    <a href="{{ request.referrer or url_for('home') }}" class="btn btn-sm btn-secondary">
+        Voltar
+    </a>
+</div>
 <div class="d-flex justify-content-center">
     <div class="card shadow-sm w-100 rounded-3 mx-auto my-3" style="max-width: 50rem">
         <h4 class="card-header text-center fw-bold">Lista de Clientes</h4>
@@ -8,7 +13,7 @@
         
 
         {% for cliente in clientes%}
-        <div class="d-flex justify-content-between align-items-center py-1 border-bottom">
+        <div class="d-flex justify-content-between align-items-center mt-2 pb-2 border-bottom">
             <div class="ms-2">
                 <p class="card-text">{{cliente.nome}}</p>
             </div>
@@ -19,9 +24,13 @@
             </div>
         </div>
         {%endfor%}
-        <a class="btn btn-primary btn-sm mt-3 align-self-center" href="{{ url_for('cadastrar_cliente') }}">
-            Cadastrar Cliente
-        </a>
+        
     </div>
 </div>
+<div class="d-flex justify-content-center">
+    <a class="btn btn-primary btn-sm my-1 align-self-center" href="{{ url_for('cadastrar_cliente') }}">
+        Cadastrar Cliente
+    </a>
+</div>
+
 {% endblock %}
