--- a/templates/listar_pecas.html
+++ b/templates/listar_pecas.html
@@ -1,6 +1,11 @@
 {% extends 'base.html' %}
 
 {% block content %}
+<div class="d-flex justify-content-start">
+    <a href="{{ request.referrer or url_for('dashboard') }}" class="btn btn-sm btn-secondary">
+        Voltar
+    </a>
+</div>
 <h1>Lista de Peças</h1>
 <table class="table table-hover table-striped" >
     <thead>
@@ -27,7 +32,10 @@
         {%endfor%}
     </tbody>
 </table>
-<a class="btn btn-primary btn-sm" href="{{ url_for('cadastrar_peca') }}">
-    Cadastrar Peça
-</a>
+<div class="d-flex justify-content-center">
+    <a class="btn btn-primary btn-sm" href="{{ url_for('cadastrar_peca') }}">
+        Cadastrar Peça
+    </a>
+</div>
+
 {% endblock %}
