--- a/templates/ver_os_cliente.html
+++ b/templates/ver_os_cliente.html
@@ -1,7 +1,7 @@
 {% extends 'base_publica.html' %}
 
 {% block content %}
-<a href="{{ request.referrer or url_for('home') }}" class="btn btn-secondary">
+<a href="{{ request.referrer or url_for('dashboard_cliente') }}" class="btn btn-secondary">
     Voltar
 </a>
 <h2 class="text-center">Informações Básicas</h2>
@@ -23,22 +23,22 @@
           <h4 class="card-header text-center">Detalhes da OS #{{ordem_servico.numero_formatado}}</h4>
         </div>
         <div class="my-1">
-          <label class="form-label" for="equipamento">Equipamento: {{ordem_servico.equipamento}}</label>
+          <p class="card-text" for="equipamento">Equipamento: {{ordem_servico.equipamento}}</p>
           </div>
           <div class="mb-1">
-          <label class="form-label" for="marca">Marca: {{ordem_servico.marca}}</label>
-          </div>
-      
-          <div class="mb-1">
-          <label class="form-label" for="modelo">Modelo: {{ordem_servico.modelo}}</label>
+          <p class="card-text" for="marca">Marca: {{ordem_servico.marca}}</p>
           </div>
       
           <div class="mb-1">
-          <label class="form-label" for="defeito">Defeito: {{ordem_servico.defeito}}</label>
+          <p class="card-text" for="modelo">Modelo: {{ordem_servico.modelo}}</p>
           </div>
       
           <div class="mb-1">
-          <label class="form-label" for="status">Status em tempo real: <span class="badge bg-success align-middle">{{ordem_servico.status}}</span></label>
+          <p class="card-text" for="defeito">Defeito: {{ordem_servico.defeito}}</p>
+          </div>
+      
+          <div class="mb-1">
+          <p class="card-text" for="status">Status em tempo real: <span class="badge bg-success align-middle">{{ordem_servico.status}}</span></p>
           </div>
       </div>
     </div>
