--- a/templates/cadastrar_cliente.html
+++ b/templates/cadastrar_cliente.html
@@ -1,82 +1,97 @@
 {% extends 'base.html' %}
     {% block content %}
-    <h1>Cadastro de Cliente</h1>
-    <form method="post">
-        <div class="mb-3">
-            <label for="nome" class="form-label">Nome:</label>
-            <input class="form-control" type="text" id="nome_cliente" name="nome" required placeholder="Qual o nome do cliente?">
-        </div>
-        <div class="card mb-3">
-            <label for="username_cliente" class="form-label card-title">Nome de usuário:</label>
-            <input class="form-control" type="text" id="username_cliente" name="username_cliente" required placeholder="Nome de usuário...">
-            <label for="password_cliente" class="form-label card-title">Senha:</label>
-            <input class="form-control" type="password" id="password_cliente" name="password_cliente" required placeholder="Digite a senha...">
-        </div>
+    
+    <div class="card mt-3 shadow-sm ">
+        <h1 class="card-header text-center">Cadastro de Cliente</h1>
         
-        <div class="mb-3">
-            <label class="form-label" for="telefone_celular">Telefone Celular:</label>
-            <input class="form-control" type="tel" id="telefone_celular" name="telefone_celular" required placeholder="Telefone com DDD">
-        </div>
-        <div class="mb-3">
-            <label class="form-label" for="telefone_auxiliar">Telefone Auxiliar:</label>
-            <input class="form-control" type="tel" id="telefone_auxiliar" name="telefone_auxiliar" required placeholder="Telefone com DDD">
-        </div>
-        <div class="mb-3">
-            <label for="tipo_cliente" class="form-label">Tipo de Cliente:</label>
-                <select class="form-select" id="tipo_cliente" name="tipo_cliente">
-                    <option selected value="">Selecione...</option>
-                    <option value="fisica">Pessoa Física</option>
-                    <option value="juridica">Pessoa Jurídica</option>
-                </select>
-        </div>
+            <form class="card-body" method="post">
+                <div class="row align-items-center"></div>
+                    <div class="col">
+                        <div class="mb-3">
+                            <label for="nome" class="form-label">Nome:</label>
+                            <input class="form-control" type="text" id="nome_cliente" name="nome" required placeholder="Qual o nome do cliente?">
+                        </div>
+                        <div class="card mb-3">
+                            <div class="card-body">
+                                <p for="username_cliente" class="form-label card-title">Nome de usuário:</p>
+                                <input class="form-control" type="text" id="username_cliente" name="username_cliente" required placeholder="Nome de usuário...">
+                                <label for="password_cliente" class="form-label card-title">Senha:</label>
+                                <input class="form-control" type="password" id="password_cliente" name="password_cliente" required placeholder="Digite a senha...">
+                            </div>
+                        </div>
+                    
+                        <div class="mb-3">
+                            <label class="form-label" for="telefone_celular">Telefone Celular:</label>
+                            <input class="form-control" type="tel" id="telefone_celular" name="telefone_celular" required placeholder="Telefone com DDD">
+                        </div>
+                        <div class="mb-3">
+                            <label class="form-label" for="telefone_auxiliar">Telefone Auxiliar:</label>
+                            <input class="form-control" type="tel" id="telefone_auxiliar" name="telefone_auxiliar" placeholder="Telefone com DDD">
+                        </div>
+                        <div class="mb-3">
+                            <label for="tipo_cliente" class="form-label">Tipo de Cliente:</label>
+                                <select class="form-select" id="tipo_cliente" name="tipo_cliente">
+                                    <option selected value="">Selecione...</option>
+                                    <option value="fisica">Pessoa Física</option>
+                                    <option value="juridica">Pessoa Jurídica</option>
+                                </select>
+                        </div>
+                    </div>
+                    
+                    <div class="col">
+                        <div class="mb-3 d-none" id="campo_cpf">
+                        <label for="cpf" class="form-label">CPF:</label>
+                        <input type="text" class="form-control" id="cpf" name="cpf" placeholder="CPF">
+                        </div>
 
-        <div class="mb-3 d-none" id="campo_cpf">
-            <label for="cpf" class="form-label">CPF:</label>
-            <input type="text" class="form-control" id="cpf" name="cpf" placeholder="CPF">
+                        <div class="mb-3 d-none" id="campo_cnpj">
+                            <label for="cnpj" class="form-label">CNPJ:</label>
+                            <input type="text" class="form-control" id="cnpj" name="cnpj" placeholder="CNPJ">
+                        </div>
+                        <div class="mb-3 ">
+                            <label for="endereco" class="form-label">Endereço:</label>
+                        </div>
+                        <div class="mb-3 ">
+                            <label for="cep" class="form-label">CEP:</label>
+                            <input type="text" class="form-control" id="cep" name="cep" placeholder="CEP">
+                        </div>
+                        <div class="mb-3 ">
+                            <label for="logradouro" class="form-label">Logradouro:</label>
+                            <input type="text" class="form-control" id="logradouro" name="logradouro" placeholder="Logradouro (rua, avenida etc.)">
+                        </div>
+                        <div class="mb-3 ">
+                            <label for="numero" class="form-label">Numero:</label>
+                            <input type="text" class="form-control" id="numero" name="numero" placeholder="Número">
+                        </div>
+                        <div class="mb-3 ">
+                            <label for="complemento" class="form-label">Complemento:</label>
+                            <input type="text" class="form-control" id="complemento" name="complemento" placeholder="Complemento (apto, casa etc.)">
+                        </div>
+                        <div class="mb-3 ">
+                            <label for="bairro" class="form-label">Bairro:</label>
+                            <input type="text" class="form-control" id="bairro" name="bairro" placeholder="Bairro">
+                        </div>
+                        <div class="mb-3 ">
+                            <label for="cidade" class="form-label">Cidade:</label>
+                            <input type="text" class="form-control" id="cidade" name="cidade" placeholder="Cidade">
+                        </div>
+                        <div class="mb-3 ">
+                            <label for="estado" class="form-label">Estado:</label>
+                            <input type="text" class="form-control" id="estado" name="estado" placeholder="Estado">
+                        </div>
+                        <div class="mb-3">
+                            <label for="anotacoes" class="form-label">Anotações:</label>
+                            <textarea class="form-control" id="anotacoes" name="anotacoes" rows="3"></textarea>
+                        </div>
+                    </div>
+                </div>
+                
+                <button class="btn btn-primary" type="submit">Salvar Cliente</button>
+            </form>
         </div>
-
-        <div class="mb-3 d-none" id="campo_cnpj">
-            <label for="cnpj" class="form-label">CNPJ:</label>
-            <input type="text" class="form-control" id="cnpj" name="cnpj" placeholder="CNPJ">
-        </div>
-        <div class="mb-3 ">
-            <label for="endereco" class="form-label">Endereço:</label>
-        </div>
-        <div class="mb-3 ">
-            <label for="cep" class="form-label">CEP:</label>
-            <input type="text" class="form-control" id="cep" name="cep" placeholder="CEP">
-        </div>
-        <div class="mb-3 ">
-            <label for="logradouro" class="form-label">Logradouro:</label>
-            <input type="text" class="form-control" id="logradouro" name="logradouro" placeholder="Logradouro (rua, avenida etc.)">
-        </div>
-        <div class="mb-3 ">
-            <label for="numero" class="form-label">Numero:</label>
-            <input type="text" class="form-control" id="numero" name="numero" placeholder="Número">
-        </div>
-        <div class="mb-3 ">
-            <label for="complemento" class="form-label">Complemento:</label>
-            <input type="text" class="form-control" id="complemento" name="complemento" placeholder="Complemento (apto, casa etc.)">
-        </div>
-        <div class="mb-3 ">
-            <label for="bairro" class="form-label">Bairro:</label>
-            <input type="text" class="form-control" id="bairro" name="bairro" placeholder="Bairro">
-        </div>
-        <div class="mb-3 ">
-            <label for="cidade" class="form-label">Cidade:</label>
-            <input type="text" class="form-control" id="cidade" name="cidade" placeholder="Cidade">
-        </div>
-        <div class="mb-3 ">
-            <label for="estado" class="form-label">Estado:</label>
-            <input type="text" class="form-control" id="estado" name="estado" placeholder="Estado">
-        </div>
-        <div class="mb-3">
-            <label for="anotacoes" class="form-label">Anotações:</label>
-            <textarea class="form-control" id="anotacoes" name="anotacoes" rows="3"></textarea>
-        </div>
-        
-        <button class="btn btn-primary" type="submit">Salvar Cliente</button>
-    </form>
+    
+    </div>
+    
     {% endblock %}
     {% block scripts %}
     <script>
