--- a/templates/detalhes_cliente.html
+++ b/templates/detalhes_cliente.html
@@ -1,50 +1,53 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="card">
-    <h5 class="card-title">
-        <strong>Informações do cliente</strong>
-    </h5>
-    <div class="card-body">
-        <div class="card-title">Nome: {{cliente_a_detalhar.nome}}</div>
-        <div class="card-text">Telefone Celular: {{cliente_a_detalhar.telefone_celular}}<br>Telefone auxiliar: {{cliente_a_detalhar.telefone_auxiliar}}</div>
-        <div class="card-text">Endereço: {{cliente_a_detalhar.logradouro}}, Nº{{cliente_a_detalhar.numero}}, Bairro: {{cliente_a_detalhar.bairro}}<br>{{cliente_a_detalhar.cidade}} - {{cliente_a_detalhar.estado}}</div>
+<div class="d-flex text-center mt-3">
+    <div class="card shadow-sm w-100 rounded-3 mx-auto my-3">
+        <h5 class="card-header">
+            <strong>Informações do cliente</strong>
+        </h5>
+        <div class="card-body">
+            <div class="card-title">Nome: {{cliente_a_detalhar.nome}}</div>
+            <div class="card-text">Telefone Celular: {{cliente_a_detalhar.telefone_celular}}<br>Telefone auxiliar: {{cliente_a_detalhar.telefone_auxiliar}}</div>
+            <div class="card-text">Endereço: {{cliente_a_detalhar.logradouro}}, Nº{{cliente_a_detalhar.numero}}, Bairro: {{cliente_a_detalhar.bairro}}<br>{{cliente_a_detalhar.cidade}} - {{cliente_a_detalhar.estado}}</div>
+        </div>
     </div>
-</div><br>
+</div>
+<div class="card text-center mt-3">
+    <h3 class="card-header text-center">Pedidos</h3>
+    <table class="table table-hover table-striped" >
+        <thead>
+            <tr>
+                <th>Nº OS</th>
+                <th>Equipamento</th>
+                <th>Defeito</th>
+                <th>Status</th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for ordens in ordens_servico %}
+            <tr class="card-body">
+                <td>
+                    {{ordens.numero_formatado}}
+                </td>
+                <td>
+                    {{ordens.equipamento}}
+                </td>
+                <td>
+                    {{ordens.defeito}}
+                </td>
+                <td>
+                    {{ordens.status}}
+                </td>
+                <td>
+                    <a class="btn btn-primary btn-sm" href="{{url_for('detalhes_os', id = ordens.id)}}">Abrir / Editar</a>
+                </td>
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+</div>
+<a href="{{ url_for('cadastrar_os', cliente_id=cliente_a_detalhar.id) }}" class="btn btn-primary btn-sm mt-3">Novo Pedido</a>
 
-
-<h3>Pedidos</h3>
-<table class="table table-hover table-striped" >
-    <thead>
-        <tr>
-            <th>Nº OS</th>
-            <th>Equipamento</th>
-            <th>Defeito</th>
-            <th>Status</th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        {% for ordens in ordens_servico %}
-        <tr>
-            <td>
-                {{ordens.numero_formatado}}
-            </td>
-            <td>
-                {{ordens.equipamento}}
-            </td>
-            <td>
-                {{ordens.defeito}}
-            </td>
-            <td>
-                {{ordens.status}}
-            </td>
-            <td>
-                <a class="btn btn-primary" href="{{url_for('detalhes_os', id = ordens.id)}}">Abrir / Editar</a>
-            </td>
-        </tr>
-        {% endfor %}
-    </tbody>
-</table>
-<a href="{{ url_for('cadastrar_os', cliente_id=cliente_a_detalhar.id) }}" class="btn btn-primary">Novo Pedido</a><br>
 {% endblock %}
