--- a/templates/home.html
+++ b/templates/home.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="row mb-4">
+<div class="row mt-3 mb-4">
     <div class="col-md-4">
         <div class="card text-center">
             <div class="card-title">
